# cscgi

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.txt  Doxyfile  LICENSE.txt  README.rst  cscgi-config.cmake  scgi.sln
code/: CMakeLists.txt  scgi.c  scgi.cpp  scgi.h  scgi.hpp  scgi.vcproj
demo/: CMakeLists.txt  demo.cpp  demo.vcproj  lighttpd.conf  scgi.cpp  scgi.hpp
demo/libevent/: CMakeLists.txt  scgi-libevent.c
help/: Doxyfile
test/: CMakeLists.txt  scgi-get-body.cpp  scgi-get-head.cpp
test/data/: request-001.txt
